--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 .image_resize{
     margin-left: auto;
     margin-right: auto;
-    width: 400%;
-    height: 200px;
+    width: 150px;
+    height: 150px;
 }
 
 .nextpage{
@@ -16,13 +16,14 @@
     float: right;
 }
 
-.center{
+#premlogo{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 200px;
-    height: 300px;
+    width: 500px;
+    height: 200px;
     border: 3px solid black;
+    background-color: white;
     border-radius: 25px;
     padding: 10px;
 }
@@ -53,11 +54,39 @@ h2, summary{
     text-decoration: underline;
 }
 
-p{
+.pagebackground{
+    background-image: url(/images/background.jpeg);
+    background-size: cover;
     text-align: center;
+    color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 body{
     background-color: lightgoldenrodyellow;
+}
+
+.card{
+    background-color: white;
+    color: black;
+    box-shadow: 5px 5px 9px black;
+    max-width: 300px;
+    margin: 5px;
+    text-align: center;
+    padding: 5px;
+
+}
+
+details:hover{
+    background-color: lightgray;
+}
+
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+ul, li{
+    list-style: none;
 }
