--- a/css/styles.css
+++ b/css/styles.css
@@ -50,13 +50,17 @@ h1{
 h2, summary{
     text-align: center;
     font-size: 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-decoration: underline;
 }
 
-.pagebackground{
+h3{
+    font-weight: lighter;
+}
+
+body{
     background-image: url(/images/background.jpeg);
-    background-size: cover;
+    background-size: 100% 100%;
     text-align: center;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -77,7 +81,7 @@ body{
 
 }
 
-details:hover{
+a:hover, details:hover{
     background-color: lightgray;
 }
 
@@ -89,4 +93,16 @@ details:hover{
 
 ul, li{
     list-style: none;
+}
+
+nav{
+    background-color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
+
+a{
+    padding-right: 10px;
+    
 }
