--- a/css/styles.css
+++ b/css/styles.css
@@ -17,17 +17,6 @@
     padding: 10px;
 }
 
-h1{
-    text-align: center;
-    font-size: 60px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: black;
-    color: antiquewhite;
-    outline-style: double;
-    outline-color: gray;
-    outline-width: 5px;
-}
-
 h2, summary{
     text-align: center;
     font-size: 20px;
@@ -39,17 +28,14 @@ h3{
     font-weight: lighter;
 }
 
-body{
+/* body{
     background-image: url(/images/background.jpeg);
     background-size: 100% 100%;
     text-align: center;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+} */
 
-body{
-    background-color: lightgoldenrodyellow;
-}
 
 /* .card{
     background-color: white;
@@ -63,7 +49,7 @@ body{
 } */
 
 a:hover, details:hover{
-    background-color: lightgray;
+    background-color: rgba(211, 211, 211, 0.7);
     border-radius: 5px;
 }
 
@@ -110,3 +96,7 @@ ul, li{
     padding: 4px 2px;
     text-align: left;
   }  
+
+  .overlap{
+    height:90px;
+  }
