--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,87 @@
 }
 
 #premlogo{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 500px;
-    height: 200px;
-    border: 3px solid black;
+    width: 20%;
+    height: 20%;
+    border: 5px solid black;
     background-color: white;
     border-radius: 25px;
     padding: 10px;
+    position: absolute;
+    margin: 10px;
+    text-align: center;
+    top: 0;
+    left: 40%;
+}
+
+.imtip{
+    position: relative;
+    bottom:0;
+}
+
+div.trim{
+    max-width: 100%;
+    max-height: 210px;
+    overflow: hidden;
+}
+
+h1{
+    color: white;
+    text-align: center;
+    text-decoration: underline;
+    padding: 20px;
+    background-image: url(/images/titlebg.png);
+    max-width: 20%;
+    max-height: 210px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
+    margin-top: 1%;
+    border: none;
+    border-radius: 20px;
+    
+}
+
+.clubheader{
+    color: white;
+    text-align: left;
+    text-decoration: none;
+    font-size: 60px;
+    padding: 20px;
+    background-image: url(/images/titlebg.png);
+    max-width: 24%;
+    max-height: 250px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
+    margin-top: 1%;
+    border: none;
+    border-radius: 20px;
+    
+}
+
+.text_bg{
+    background-image: url(/images/titlebg.png);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
+    margin-top: 1%;
+    border: none;
+    border-radius: 20px;
+    padding: 40px;
+
+}
+
+.stadiums_text{
+    background-image: url(/images/titlebg.png);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1%;
+    margin-top: 1%;
+    border: none;
+    border-radius: 20px;
+    padding: 1%
+
 }
 
 h2, summary{
@@ -28,50 +100,19 @@ h3{
     font-weight: lighter;
 }
 
-/* body{
-    background-image: url(/images/background.jpeg);
-    background-size: 100% 100%;
-    text-align: center;
-    color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-} */
-
-
-/* .card{
-    background-color: white;
-    color: black;
-    box-shadow: 5px 5px 9px black;
-    max-width: 300px;
-    margin: 5px;
-    text-align: center;
-    padding: 5px;
-
-} */
+a{
+    text-decoration: none;
+    color:white
+}
 
 a:hover, details:hover{
     background-color: rgba(211, 211, 211, 0.7);
     border-radius: 5px;
+    color:black;
 }
-
-/* .container{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-} */
-
 ul, li{
     list-style: none;
 }
-
-/* nav{
-    display:inline;
-    background-color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    text-align: center;
-} */
-
-
 
 .dropdown{
     position: relative;
@@ -81,22 +122,20 @@ ul, li{
 .dropdown_content{
     display: none;
     position: absolute;
-    background-color: white;
-    min-width: 160px;
+    background-color:rgb(218,112,214, 0.7);
+    min-width: 170px;
     font-size: 15px;
+    font-weight: bold;
+    z-index:5;
 }
 
 .dropdown:hover .dropdown_content {
     display: block;
-    padding: 5px
   }
 
-  .dropdown_content a{
+.dropdown_content a{
     display: block;
     padding: 4px 2px;
     text-align: left;
-  }  
+}  
 
-  .overlap{
-    height:90px;
-  }
