--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ div.trim{
     overflow: hidden;
 }
 
-h1{
+.headerbg{
     color: white;
     text-align: center;
     text-decoration: underline;
@@ -45,6 +45,11 @@ h1{
     border: none;
     border-radius: 20px;
     
+}
+
+.hometitle{
+    background-image: url(/images/titlebg.png);
+    text-decoration: none;
 }
 
 .clubheader{
@@ -82,11 +87,15 @@ h1{
     margin-left: auto;
     margin-right: auto;
     margin-top: 1%;
-    margin-top: 1%;
     border: none;
     border-radius: 20px;
     padding: 1%
 
+}
+
+.home_sections{
+    background-color: blueviolet;
+    border-radius: 0px 5px 5px 0px;
 }
 
 h2, summary{
