--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@
     height: 150px;
 }
 
-#premlogo{
-    width: 20%;
-    height: 20%;
+.premlogo{
+    width:20%;
+    height:20%;
     border: 5px solid black;
     background-color: white;
     border-radius: 25px;
@@ -33,7 +33,6 @@ div.trim{
 .headerbg{
     color: white;
     text-align: center;
-    text-decoration: underline;
     padding: 20px;
     background-image: url(/images/titlebg.png);
     max-width: 20%;
